product and category service merge into product catalog

--- a/product-catalog-service/package.json
+++ b/product-catalog-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "category-service",
+  "name": "product-catalog-service",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
