--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "workspaces": [
     "auth-service",
     "customer-service",
-    "category-service",
-    "product-service",
+    "product-catalog-service",
     "gateway"
   ],
   "devDependencies": {
@@ -15,8 +14,8 @@
     "dev": "yarn workspaces foreach --parallel --topological-dev run dev",
     "build": "yarn workspaces foreach --topological run build",
     "start": "yarn workspaces foreach --parallel --topological run start",
-    "dev:all": "concurrently -n gateway,customer,category,product -c auto \"yarn workspace gateway dev\" \"yarn workspace customer-service dev\" \"yarn workspace category-service dev\" \"yarn workspace product-service dev\"",
-    "start:all": "concurrently -n gateway,customer,category,product -c auto \"yarn workspace gateway start\" \"yarn workspace customer-service start\" \"yarn workspace category-service start\" \"yarn workspace product-service start\"",
-    "build:all": "concurrently -n gateway,customer,category,product -c auto \"yarn workspace gateway build\" \"yarn workspace customer-service build\" \"yarn workspace category-service build\" \"yarn workspace product-service build\""
+    "dev:all": "concurrently -n gateway,customer,product-catalog -c auto \"yarn workspace gateway dev\" \"yarn workspace customer-service dev\" \"yarn workspace product-catalog-service dev\"",
+    "start:all": "concurrently -n gateway,customer,product-catalog -c auto \"yarn workspace gateway start\" \"yarn workspace customer-service start\" \"yarn workspace product-catalog-service start\"",
+    "build:all": "concurrently -n gateway,customer,product-catalog -c auto \"yarn workspace gateway build\" \"yarn workspace customer-service build\" \"yarn workspace product-catalog-service build\""
   }
 }
