--- a/iam-service/package.json
+++ b/iam-service/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/index.js",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "lint:fix": "eslint 'src/**/*.{ts,tsx}' --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "@types/morgan": "^1.9.10",
@@ -31,6 +32,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.30",
     "@types/swagger-jsdoc": "^6.0.4",
@@ -38,7 +40,11 @@
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
+    "jest": "^30.2.0",
+    "mongodb-memory-server": "^10.4.1",
     "prettier": "^3.5.3",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
