--- a/iam-service/tsconfig.json
+++ b/iam-service/tsconfig.json
@@ -6,5 +6,8 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true
-  }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist", "jest.config.ts"]
 }
+ 
