--- a/product-catalog-service/tsconfig.json
+++ b/product-catalog-service/tsconfig.json
@@ -6,5 +6,7 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true
-  }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist", "jest.config.ts"]
 }
