--- a/product-catalog-service/tsconfig.json
+++ b/product-catalog-service/tsconfig.json
@@ -7,6 +7,6 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts"],
   "exclude": ["node_modules", "dist", "jest.config.ts"]
 }
